# rag-bot

./: .gitignore  README.md
rag-backend/: .dockerignore  .gitignore  Dockerfile  LOGGING.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
rag-backend/app/: main.py
rag-backend/app/api/v1/: __init__.py  chat.py  ingest.py  query.py
rag-backend/app/core/: auth.py  config.py  config_openai.py
rag-backend/app/handlers/: __init__.py  chat_handler.py
rag-backend/app/models/: chat.py  query.py  vectorstore.py
rag-backend/app/services/: chat_service.py  ingestion_service.py  query_service.py  vectorstore_service.py
rag-backend/app/utils/: logger.py
rag-frontend/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  env.example  index.html  package-lock.json  package.json  typedoc.json
rag-frontend/docs/: API.md  COMPONENTS.md  DEPLOYMENT.md  DEVELOPMENT.md  PROJECT_OVERVIEW.md
rag-frontend/src/: App.tsx  constants.ts
rag-frontend/src/api/: chatApi.tsx
rag-frontend/src/components/AvatarPreview/: AvatarPreview.tsx  index.ts
rag-frontend/src/components/Chat/: Chat.styles.ts  Chat.tsx  ChatLayout.tsx  index.ts
rag-frontend/src/components/DeleteThreadDialog/: DeleteThreadDialog.tsx  index.ts
rag-frontend/src/context/: AuthContext.tsx
rag-frontend/src/data/: chatHistory.json
rag-frontend/src/modules/auth/: actions.ts  (+1 more)
rag-frontend/src/store/: index.ts  store.ts
rag-frontend/src/styles/: theme.ts
rag-frontend/src/types/: chat.ts  global.ts  thread.ts
rag-frontend/src/utils/: avatarUtils.ts  dateUtils.ts  tokenUtils.tsx
(+32 files in other folders)
